# tubegpt

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg  tubegpt_Video_process_GPU.ipynb  tubegpt_v2.ipynb
.devcontainer/: Dockerfile
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
src/notebook/: clip-descrption-blip2v2.txt  list-blip2-moiveClip.txt  list-blip2-universalv2.txt  list-bliplarge.txt  list.txt  tube_gpt_audio_timeframed.ipynb  tube_gpt_v2.ipynb  tubegpt.ipynb  tubegptFinal.ipynb  universal-descrption-blip2.txt  universal-descrption-blip2v2.txt
src/tubegpt/: sample.py  tubegpt.py
src/tubegpt/audio/: audio_extractor.py  simple_audio_info_extractor.py
src/tubegpt/chain/: retrieval_qa_chain.py
src/tubegpt/embedding/: chromadb.py
src/tubegpt/video/: simple_video_information_extractor.py  video_extractor.py
tests/: __init__.py  test_tubegpt.py
tubegpt/: __init__.py
tubegpt/notebook/: tubegpt.ipynb
